--- a/doc_template/views/partials/layout/page.hbs
+++ b/doc_template/views/partials/layout/page.hbs
@@ -8,7 +8,7 @@
       <span aria-hidden="true">×</span>
     </button>
     <div id="logo">
-      <img src="/s/img/website/quire_logo.svg" title="{{info.title}}" />
+      <img src="https://quire.io/s/img/website/quire_logo.svg" title="{{info.title}}" />
     </div>
     {{>layout/nav}}
   </div>
