[API doc] Implement sort operations

--- a/doc_template/views/partials/layout/nav.hbs
+++ b/doc_template/views/partials/layout/nav.hbs
@@ -27,7 +27,7 @@
       <section>
         <a href="#tag-{{htmlId name}}">{{name}}</a>
         <ul>
-          {{#each operations}}
+          {{#operationSorted operations}}
             <li>
               <a href="#operation-{{htmlId path}}-{{htmlId method}}">
                 {{#if summary}}
@@ -37,7 +37,7 @@
                 {{/if}}
               </a>
             </li>
-          {{/each}}
+          {{/operationSorted}}
         </ul>
       </section>
     {{/each}}
