--- a/doc_template/views/partials/swagger/tags.hbs
+++ b/doc_template/views/partials/swagger/tags.hbs
@@ -7,7 +7,7 @@
         </div>
       </div>
     {{/if}}
-    {{#each operations}}
+    {{#operationSorted operations}}
       {{>swagger/operation . operation=. method=method path=path}}
-    {{/each}}
+    {{/operationSorted}}
 {{/each}}
