[API doc] Adjust sidebar links

--- a/doc_template/views/partials/swagger/introduction.hbs
+++ b/doc_template/views/partials/swagger/introduction.hbs
@@ -1,4 +1,4 @@
-<div id="introduction" data-traverse-target="introduction">
+<div class="introduction">
   <div class="doc-row">
     <div class="doc-copy">
         {{md info.description}}
