--- a/doc_template/views/partials/layout/nav.hbs
+++ b/doc_template/views/partials/layout/nav.hbs
@@ -9,6 +9,7 @@
     <a href="#introduction">Introduction</a>
   {{/unless}}
 
+  {{!--
   {{#if securityDefinitions}}
    {{#unless securityDefinitions.x-spectacle-hide}}
      <a href="#authentication">Authentication</a>
@@ -20,6 +21,13 @@
       <a href="#topic-{{htmlId @key}}">{{@key}}</a>
     {{/each}}
   {{/if}}
+  --}}
+
+  <a href="#api-changelog">API Changelog</a>
+  <a href="#authentication">Authentication</a>
+  <a href="#webhook">WebHook</a>
+  <a href="#rate-limits">Rate limits</a>
+  <a href="#status-codes">Status codes</a>
 
   {{#if showTagSummary}}
     <h5>Operations</h5>
