--- a/doc_template/views/partials/layout/page.hbs
+++ b/doc_template/views/partials/layout/page.hbs
@@ -3,13 +3,28 @@
   @api public
 --}}
 <div id="page" class="drawer-layout drawer-slide-right-large">
-  <div id="sidebar">
-    <button class="close-button" aria-label="Close menu" type="button" data-drawer-close>
-      <span aria-hidden="true">×</span>
-    </button>
-    <div id="logo">
-      <img src="https://quire.io/s/img/website/quire_logo.svg" title="{{info.title}}" />
+  <header class="header-wrap navbar navbar-default navbar-fixed-top">
+    <div id="header" class="container">
+      <div id="quire-logo" class="navbar-header">
+        <h1 class="quire-logo-icon">
+          <em>
+            <a href="/" title="Quire">
+              <img src="https://quire.io/s/img/website/quire_logo.svg" alt="Quire">
+            </a>
+          </em>
+        </h1>
+        <h3 class="app-home-icon"><a href="/doc/api/v2/">API Documentation</a></h3>
+      </div>
+      <nav class="navbar-collapse bs-navbar-collapse collapse clearfix">
+        <ul id="header-icons" class="nav navbar-nav navbar-right">
+          <li class="item workspace">
+            <a href="/w" class="b white">GO TO YOUR PROJECT</a>
+          </li>
+        </ul>
+      </nav>
     </div>
+  </header>
+  <div id="sidebar">
     {{>layout/nav}}
   </div>
   {{!layout/topbar}}
