[API doc] Fixed style

--- a/doc_template/stylesheets/_index.scss
+++ b/doc_template/stylesheets/_index.scss
@@ -29,6 +29,10 @@ $header-height: 64px;
         top: 85px;
     }
   }
+
+  .hljs {
+        background-color: #23241f !important;
+  }
 }
 
 html, body {
