--- a/doc_template/views/partials/layout/head.hbs
+++ b/doc_template/views/partials/layout/head.hbs
@@ -3,8 +3,8 @@
 --}}
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>{{info.title}} | API Reference</title>
-<link rel="stylesheet" href="https://quire.io/b930/s/css/regular.css" />
+<title>{{info.title}} | Documentation</title>
+<link rel="stylesheet" href="/s/css/app.css" />
 <link rel="stylesheet" href="stylesheets/foundation.min.css" />
 <link rel="stylesheet" href="stylesheets/spectacle.min.css" />
 
