--- a/doc_template/views/main.hbs
+++ b/doc_template/views/main.hbs
@@ -4,7 +4,7 @@
   <head>
     {{>layout/head}}
   </head>
-  <body id="spectacle">
+  <body id="spectacle" class="app-header">
     {{>layout/page}}
   </body>
 </html>
