--- a/doc_template/stylesheets/_index.scss
+++ b/doc_template/stylesheets/_index.scss
@@ -29,6 +29,8 @@ $header-height: 64px;
     .floating-menu-icon {
         top: 85px;
         right: 30px;
+        font-size: 24px;
+        padding: 0px 6px;
     }
     &.sliding {
         .floating-menu-icon {
