--- a/doc_template/views/partials/layout/page.hbs
+++ b/doc_template/views/partials/layout/page.hbs
@@ -39,7 +39,7 @@
   {{!layout/topbar}}
   <div id="docs" class="row collapse expanded drawer" data-drawer>
     <button class="floating-menu-icon" type="button" data-drawer-slide="right">
-      <span class="hamburger"></span>
+      <i class="icon-book-open-o"></i>
     </button>
     <div class="example-box doc-content"></div>
     {{>layout/content}}
