--- a/doc_template/views/partials/layout/head.hbs
+++ b/doc_template/views/partials/layout/head.hbs
@@ -7,3 +7,5 @@
 <link rel="stylesheet" href="/s/css/app.css" />
 <link rel="stylesheet" href="stylesheets/foundation.min.css" />
 <link rel="stylesheet" href="stylesheets/spectacle.min.css" />
+<script src="https://d12y7sg0iam4lc.cloudfront.net/s/js/jquery-1.10.2.min.js"></script>
+<script src="javascripts/spectacle.min.js"></script>
