--- a/doc_template/views/partials/layout/page.hbs
+++ b/doc_template/views/partials/layout/page.hbs
@@ -79,4 +79,4 @@
   </div>
 </div>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48347893-1"></script>
-<script async src="/blog/assets/js/pack.min.js"></script>
+<script async src="/s/js/pack.min.js"></script>
