--- a/doc_template/views/partials/layout/nav.hbs
+++ b/doc_template/views/partials/layout/nav.hbs
@@ -25,6 +25,7 @@
 
   <a href="#api-changelog">API Changelog</a>
   <a href="#authentication">Authentication</a>
+  <a href="#publish-app">Publish App</a>
   <a href="#webhook">WebHook</a>
   <a href="#rate-limits">Rate limits</a>
   <a href="#status-codes">Status codes</a>
