Added meta tags

--- a/doc_template/views/partials/layout/head.hbs
+++ b/doc_template/views/partials/layout/head.hbs
@@ -1,6 +1,20 @@
 {{!--
   Renders the HTML head content
 --}}
+<meta name="description" content="Everything you need to know about Quire API and how to start building an app that makes Quire an even better experience for you and your team.">
+<meta property="og:description" content="Everything you need to know about Quire API and how to start building an app that makes Quire an even better experience for you and your team.">
+<meta property="og:title" content="Quire API Documentation">
+<meta property="og:locale" content="en_US">
+<meta name="keywords" content="project management software, Quire, API, task management software, developers, tutorial, team collaboration, task management, productivity, to do list, productivity app">
+<meta property="article:tag" content="collaboration">
+<meta property="article:tag" content="tutorial">
+<meta property="article:tag" content="Quire API">
+<meta property="article:tag" content="Quire developers">
+<meta property="article:tag" content="project management software">
+<meta property="article:tag" content="teamwork">
+<meta property="article:tag" content="productivity">
+<meta property="article:tag" content="to do list apps">
+<meta property="article:tag" content="task management">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>{{info.title}} | Documentation</title>
