Adjust header style

--- a/doc_template/stylesheets/_index.scss
+++ b/doc_template/stylesheets/_index.scss
@@ -31,6 +31,9 @@ $header-height: 64px;
         right: 30px;
         font-size: 24px;
         padding: 0px 6px;
+        line-height: 1.5;
+        color: #fff;
+        padding: 4px;
     }
     &.sliding {
         .floating-menu-icon {
