--- a/doc_template/views/partials/layout/page.hbs
+++ b/doc_template/views/partials/layout/page.hbs
@@ -38,6 +38,7 @@
               <li class="dropdown-header"></li>
 
               <li class="u-item"><a href="[:url currentUser]"><i class="icon-user-o"></i>My Profile</a></li>
+              <li class="u-item"><a href="/r/setting?tab=app"><i class="icon-dots-grid"></i>My Apps</a></li>
               <li class="u-item"><a href="/r/setting?tab=options"><i class="icon-cog-o"></i>Account Settings</a></li>
 
               <li class="divider"></li>
