--- a/doc_template/stylesheets/_index.scss
+++ b/doc_template/stylesheets/_index.scss
@@ -31,9 +31,11 @@ $header-height: 64px;
         right: 30px;
         font-size: 24px;
         padding: 0px 6px;
-        line-height: 1.5;
-        color: #fff;
-        padding: 4px;
+        > i {
+            line-height: 1.5;
+            color: #fff;
+            padding: 4px;
+        }
     }
     &.sliding {
         .floating-menu-icon {
@@ -102,6 +104,16 @@ html, body {
         }
      }
 }
+
+@media (min-width: 768px) and (max-width: 959px) {
+    .qr-collapse-navbar-768 {
+        #header {
+            .navbar-header {
+                float: none;
+            }
+         }
+     }
+ }
 
 .dropdown-menu {
     position: absolute;
