Close #25: [Doc] Support multiple types

--- a/doc_template/stylesheets/_foundation-settings.scss
+++ b/doc_template/stylesheets/_foundation-settings.scss
@@ -112,7 +112,7 @@ $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $light-black: #353a3d;
-$black: #2d3134; //#0a0a0a;
+$black: rgba(0,0,0,0.9); //#0a0a0a;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: rgba(0,0,0,0.9);
