Update font style to newest theme in Dev-Api page

--- a/doc_template/views/partials/layout/head.hbs
+++ b/doc_template/views/partials/layout/head.hbs
@@ -21,5 +21,8 @@
 <link rel="stylesheet" href="/s/css/app.css" />
 <link rel="stylesheet" href="stylesheets/foundation.min.css" />
 <link rel="stylesheet" href="stylesheets/spectacle.min.css" />
-<script src="https://d12y7sg0iam4lc.cloudfront.net/s/js/jquery-3.6.0.min.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="javascripts/spectacle.min.js"></script>
