--- a/doc_template/stylesheets/_foundation-settings.scss
+++ b/doc_template/stylesheets/_foundation-settings.scss
@@ -116,7 +116,7 @@ $black: rgba(0,0,0,0.9); //#0a0a0a;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: rgba(0,0,0,0.9);
-$body-font-family: Lato,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+$body-font-family: Inter,-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
