Fix Hamburger menu button not working in Dev-Api page

--- a/doc_template/views/partials/layout/page.hbs
+++ b/doc_template/views/partials/layout/page.hbs
@@ -12,7 +12,7 @@
         <h1 class="quire-logo-icon">
           <em>
             <a href="/" title="Quire">
-              <img src="https://quire.io/s/img/website/quire_logo.svg" alt="Quire">
+              <img src="https://quire.io/s/img/quire_logo.svg" alt="Quire">
             </a>
           </em>
         </h1>
