--- a/doc_template/stylesheets/foundation-includes.scss
+++ b/doc_template/stylesheets/foundation-includes.scss
@@ -63,3 +63,7 @@ tbody tr:nth-child(even) {
 tr {
     border-bottom: 1px solid $border-color;
 }
+
+.no-touch a:hover {
+    text-decoration: underline;
+}
