--- a/doc_template/stylesheets/_index.scss
+++ b/doc_template/stylesheets/_index.scss
@@ -95,7 +95,7 @@ html, body {
 #header-icons {
     .item {
         > a {
-           display: block;
+           display: inline-block;
         }
     }
 }
@@ -120,6 +120,15 @@ html, body {
             }
          }
      }
+ }
+
+ .tooltip {
+    position: absolute;
+    z-index: 1030;
+    display: block;
+    visibility: visible;
+    font-size: 12px;
+    line-height: 1.4;
  }
 
 .dropdown-menu {
@@ -170,6 +179,10 @@ html, body {
 
 .open>.dropdown-menu {
     display: block;
+}
+
+.pull-left {
+    float: left !important;
 }
 
 .pull-right {
