Use /s/js/mesg_en.js instead of /r/en/mesg.js

--- a/doc_template/views/partials/layout/page.hbs
+++ b/doc_template/views/partials/layout/page.hbs
@@ -98,5 +98,5 @@
   </div>
 </div>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48347893-1"></script>
-<script async src="/r/en/mesg.js"></script>
+<script async src="/s/js/mesg_en.js"></script>
 <script async src="/s/js/pack.min.js"></script>
