Fixed header css

--- a/doc_template/stylesheets/_index.scss
+++ b/doc_template/stylesheets/_index.scss
@@ -94,6 +94,7 @@ html, body {
 
 #header-icons {
     .item {
+        line-height: normal;
         > a {
            display: inline-block;
         }
