Fixed link bookmark position

--- a/doc_template/stylesheets/_layout.scss
+++ b/doc_template/stylesheets/_layout.scss
@@ -129,6 +129,8 @@ button:focus {
   }
 }
 
+#docs > article > *,
+#docs > article > .introduction h1,
 .definition .panel-title > a{
   scroll-margin-top: 70px;
 }
