--- a/doc_template/stylesheets/_layout.scss
+++ b/doc_template/stylesheets/_layout.scss
@@ -425,7 +425,7 @@ article {
 
     .swagger-response-headers {
 
-      @include inset-panel()
+      @include inset-panel();
       margin-bottom: 1.5rem;
 
       thead {
