--- a/doc_template/views/partials/swagger/operation.hbs
+++ b/doc_template/views/partials/swagger/operation.hbs
@@ -24,6 +24,7 @@
   {{/if}}
 
   <h2 class="operation-title">
+    <a href="#operation-{{htmlId path}}-{{htmlId method}}" class="i-btn x28 icon-link copy-link-btn"></a>
     {{! Fill the title with the summary or path }}
     {{#if summary}}
       <span class="operation-summary">{{md summary stripParagraph="true"}}</span>
