--- a/doc_template/stylesheets/_layout.scss
+++ b/doc_template/stylesheets/_layout.scss
@@ -545,4 +545,29 @@ article {
     margin-bottom: 1rem;
     border: none;
   }
+
+  h1, h2, h3 {
+    .copy-link-btn {
+      text-decoration: none !important;
+      visibility: hidden;
+      float: left;
+      margin-left: -28px;
+      padding-right: 6px;
+      margin-top: 2px;
+      
+      &::before {
+        text-decoration: none;
+        font-size: 16px;
+        color: var(--text-tertiary);
+      }
+    }
+
+    &:hover .copy-link-btn {
+      visibility: visible;
+      
+      &::before {
+        color: var(--text-secondary);
+      }
+    }
+  }
 }
