Fixed link bookmark position

--- a/doc_template/stylesheets/_layout.scss
+++ b/doc_template/stylesheets/_layout.scss
@@ -131,6 +131,8 @@ button:focus {
 
 #docs > article > *,
 #docs > article > .introduction h1,
+#docs > article > .introduction h2,
+#docs > article > .introduction h3,
 .definition .panel-title > a{
   scroll-margin-top: 70px;
 }
